[gd_scene load_steps=9 format=3 uid="uid://cvktdcubck52u"]

[ext_resource type="Script" path="res://main.gd" id="1_ms0tq"]
[ext_resource type="PackedScene" uid="uid://2qqx44ei4ip5" path="res://mob.tscn" id="2_f7pfy"]
[ext_resource type="PackedScene" uid="uid://c46udhis2385t" path="res://player.tscn" id="3_g3jf6"]
[ext_resource type="AudioStream" uid="uid://dmca4pjismk8e" path="res://art/tone.mp3" id="4_whdef"]
[ext_resource type="AudioStream" uid="uid://dodqne6enovgn" path="res://art/tick.mp3" id="5_lo8r5"]
[ext_resource type="AudioStream" uid="uid://n20vjmubn0p2" path="res://art/the_comeback2.ogg" id="6_3ccfc"]
[ext_resource type="PackedScene" uid="uid://cyf1qfuiqhpba" path="res://hud.tscn" id="7_o5ria"]

[sub_resource type="Curve2D" id="Curve2D_8tehq"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -5, -1, 0, 0, 0, 0, 1148, 1, 0, 0, 0, 0, 1151, 648, 0, 0, 0, 0, -11, 651, 0, 0, 0, 0, -5, -1)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_ms0tq")
mob_scene = ExtResource("2_f7pfy")
is_mute = false
peaceful = false

[node name="BackGround" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.223529, 0.427451, 0.439216, 1)

[node name="Player" parent="." instance=ExtResource("3_g3jf6")]
z_index = 1

[node name="MobTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_8tehq")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(-5, -1)
rotation = 0.0017346

[node name="TickTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Tick" type="AudioStreamPlayer" parent="TickTimer"]
stream = ExtResource("5_lo8r5")

[node name="Tone" type="AudioStreamPlayer" parent="TickTimer"]
stream = ExtResource("4_whdef")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_3ccfc")

[node name="Label" type="Label" parent="."]
offset_right = 238.0
offset_bottom = 62.0

[node name="HUD" parent="." instance=ExtResource("7_o5ria")]

[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="TickTimer" to="." method="_on_tick_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
